Prereg form updates
- on load fix so back button doesn't mess up the form
- donation textbox added at bottom
- text content/style changes

--- a/rip11/payment.html
+++ b/rip11/payment.html
@@ -38,12 +38,12 @@
 			<div class="twelve columns" style="margin-top: 10%">
 				<h3>Thank you for registering for RIP 11.</h3>
 				
-				<h4>March 15th - 17th, 2019.</h4>
+				<h5>March 15th - 17th, 2019.</h5>
 				<h5><a href="https://www.facebook.com/events/184622442460015/">FB Event Page</a></h5>
-			  <b>Pay $<span id="amount">8</span> <a id="the_link" href="">here (PayPal)</a>,</b>
-				or Venmo @Benjamin-Tung.<br><br>
-				If using PayPal, don't forget to mark "Friends and Family".
-				<br><hr>
+				<h4><b>Pay $<span id="amount">8</span> <a id="the_link" href="">here (PayPal)</a>,</b>
+				or Venmo @Benjamin-Tung.</h4><h5>
+				If using PayPal, don't forget to mark "Friends and Family".  The link above should do this, and have your total automatically.</h5>
+				<hr>
 					   Though we will accept cash at the event, please pay online if you can. 
 				If you prefer or require some other method of sending money, please contact Benjamin Tung at <a href="http://messenger.com/t/noticemebenpai">messenger.com/t/noticemebenpai</a>, or <b>benjamintung21@gmail.com</b>
 				
