--- a/rip11/prereg.html
+++ b/rip11/prereg.html
@@ -71,9 +71,7 @@
 					<div id="venue-toggle" >
 					<input type="radio" name="venue-type" value="8" checked="checked">($8)Pay Online / <input type="radio" name="venue-type" value="10">($10)Pay At Door 
 					</div>
-				</div>
-				 Though we will accept cash at the event, please pay online if you can. 
-If you prefer or require some other method of sending money, please contact Benjamin Tung at <a href="http://messenger.com/t/noticemebenpai">messenger.com/t/noticemebenpai</a>, or <b>benjamintung21@gmail.com</b>
+				</div><br><br>
 				<br>
 				<hr>
 				<h4>RIP 11 Merchandise</h4>
@@ -123,14 +121,15 @@ If you prefer or require some other method of sending money, please contact Benj
 				</div>
 				<br><br><br><br><br><br>
 				<hr>
-
+				(Optional) Feel like donating to DDRIllini? We'll use it to buy sensors, pc parts, paper towels, glass cleaner, baby powder, etc.
+				<input type="text" name="donation" id="donation" value="0">
 				<h5><div id="totalCost">Your total cost comes out to: $8</div></h5>
-				You will be able to pay total on the next page<hr>
+				<h6>Please click the Submit button after you have finished filling out the form. Your payment decision will be made on the next page.<br><br>Though we will accept cash at the event, please pay online if you can. 
+If you prefer or require some other method of sending money, please contact Benjamin Tung at <a href="http://messenger.com/t/noticemebenpai">messenger.com/t/noticemebenpai</a>, or <b>benjamintung21@gmail.com</b></h6><hr>
 				<button onclick="sendQuery(); return false;">Submit</button>
 				<input type="text" name="total" id="total" style="display:none" value="8">
+				
 			  </form>
-
-				<a id="the_link" href="http://paypal.me/ddrillini/3">
 			</div>
 		</div>
 	</div>
