validation for donation box
no letters, no negative numbers, fixed cost logic w/ venue fee

--- a/rip11/prereg.html
+++ b/rip11/prereg.html
@@ -122,12 +122,12 @@
 				<br><br><br><br><br><br>
 				<hr>
 				(Optional) Feel like donating to DDRIllini? We'll use it to buy sensors, pc parts, paper towels, glass cleaner, baby powder, etc.
-				<input type="text" name="donation" id="donation" value="0">
+				<input type="number" name="donation" id="donation" value="0" min="0">
 				<h5><div id="totalCost">Your total cost comes out to: $8</div></h5>
 				<h6>Please click the Submit button after you have finished filling out the form. Your payment decision will be made on the next page.<br><br>Though we will accept cash at the event, please pay online if you can. 
 If you prefer or require some other method of sending money, please contact Benjamin Tung at <a href="http://messenger.com/t/noticemebenpai">messenger.com/t/noticemebenpai</a>, or <b>benjamintung21@gmail.com</b></h6><hr>
 				<button onclick="sendQuery(); return false;">Submit</button>
-				<input type="text" name="total" id="total" style="display:none" value="8">
+				<input type="number" name="total" id="total" style="display:none" value="0">
 				
 			  </form>
 			</div>
