update prices, add rip poster

--- a/rip11/prereg.html
+++ b/rip11/prereg.html
@@ -187,27 +187,23 @@
 					<div class="card-body">
 						<div class="form-group">
 							<label class="form-checkbox">
-								<input class="merch" type="checkbox" name="stepchart-poster" id="stepchart-poster" value="15">
-								<i class="form-icon"></i> Stepchart Reference Poster <span class="label label-primary">$15</span>
+								<input class="merch" type="checkbox" name="stepchart-poster" id="stepchart-poster" value="10">
+								<i class="form-icon"></i> Stepchart Reference Poster <span class="label label-primary">$10</span>
 							</label>
 						</div>
 					</div>
 				</div>
 				<div class="card col-sm-12 col-4">
 					<div class="card-image">
-						<div class="empty">
-							<div class="empty-icon">
-								<i class="icon icon-photo"></i>
-							</div>
-							<p class="empty-title h5">RIP11</p>
-							<p class="empty-subtitle">Design reveal at event</p>
-						</div>
+						<div class="card-image">
+						<img src="images/rip11.png" class="img-responsive">
+					</div>
 					</div>
 					<div class="card-body">
 						<div class="form-group">
 							<label class="form-checkbox">
-								<input class="merch" type="checkbox" name="rip11-poster" id="rip11-poster" value="15">
-								<i class="form-icon"></i> RIP11 Poster <span class="label label-primary">$15</span>
+								<input class="merch" type="checkbox" name="rip11-poster" id="rip11-poster" value="10">
+								<i class="form-icon"></i> RIP11 Poster <span class="label label-primary">$10</span>
 							</label>
 						</div>
 					</div>
@@ -225,8 +221,8 @@
 					<div class="card-body">
 						<div class="form-group">
 							<label class="form-checkbox">
-								<input class="merch" type="checkbox" name="mbc3-poster" id="mbc3-poster" value="15">
-								<i class="form-icon"></i> Mods Boot Camp 3 Poster (Design reveal at event) <span class="label label-primary">$15</span>
+								<input class="merch" type="checkbox" name="mbc3-poster" id="mbc3-poster" value="10">
+								<i class="form-icon"></i> Mods Boot Camp 3 Poster (Design reveal at event) <span class="label label-primary">$10</span>
 							</label>
 						</div>
 					</div>
