add limited shirts information

--- a/rip11/prereg.html
+++ b/rip11/prereg.html
@@ -119,7 +119,7 @@
 						<div class="form-group">
 							<label class="form-checkbox">
 								<input class="merch" type="checkbox" name="black-rip-shirt" id="black-rip-shirt" value="20">
-								<i class="form-icon"></i> Black RIP 11 shirt <span class="label label-primary">$20</span>
+								<i class="form-icon"></i> Black RIP11 shirt <span class="label label-primary">$20</span>
 							</label>
 							<div id="black-rip-shirt-options" style="display:none; padding-left:2em;">
 								<label class="form-radio"><input type="radio" name="black-rip-size-op" value="XS" checked><i class="form-icon"></i> XS</label>
@@ -141,7 +141,7 @@
 						<div>
 							<label class="form-checkbox">
 								<input class="merch" type="checkbox" name="white-rip-shirt" id="white-rip-shirt" value="20">
-								<i class="form-icon"></i> White RIP 11 shirt <span class="label label-primary">$20</span>
+								<i class="form-icon"></i> White RIP11 shirt <span class="label label-primary">$20</span>
 							</label>
 							<div id="white-rip-shirt-options" style="display:none; padding-left:2em;">
 								<label class="form-radio"><input type="radio" name="white-rip-size-op" value="XS" checked><i class="form-icon"></i> XS</label>
@@ -178,6 +178,9 @@
 					</div>
 				</div>
 			</div>
+			<br>
+			<div>We have a limited quantity of shirts, so we can't guarantee sizes. It will be first-come, first-serve. If you pay and there's not a suitable shirt size available, we'll refund you.</div>
+			<br>
 			<h3>Posters</h3>
 			<div class="columns">
 				<div class="card col-sm-12 col-4">
