add stream poster

--- a/rip11/prereg.html
+++ b/rip11/prereg.html
@@ -178,6 +178,7 @@
 			<br>
 			<div>We have a limited quantity of shirts, so we can't guarantee sizes. It will be first-come, first-serve. If you pay and there's not a suitable shirt size available, we'll refund you.</div>
 			<br>
+
 			<h3>Posters</h3>
 			<div class="columns">
 				<div class="card col-sm-12 col-4">
@@ -193,6 +194,7 @@
 						</div>
 					</div>
 				</div>
+
 				<div class="card col-sm-12 col-4">
 					<div class="card-image">
 						<div class="card-image">
@@ -208,6 +210,7 @@
 						</div>
 					</div>
 				</div>
+
 				<div class="card col-sm-12 col-4">
 					<div class="card-image">
 						<div class="empty">
@@ -227,8 +230,25 @@
 						</div>
 					</div>
 				</div>
+				
+				<div class="card col-sm-12 col-4">
+					<div class="card-image">
+						<div class="card-image">
+						<img src="images/stream-poster.png" class="img-responsive">
+					</div>
+					</div>
+					<div class="card-body">
+						<div class="form-group">
+							<label class="form-checkbox">
+								<input class="merch" type="checkbox" name="stream-poster" id="stream-poster" value="10">
+								<i class="form-icon"></i> Gently Down the Stream Poster <span class="label label-primary">$10</span>
+							</label>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div class="divider"></div>
+
 			<h3>Donation</h3>
 			<div class="form-group">
 				<label class="form-label" for="donation">(Optional) Feel like donating to DDRIllini? We'll use it to buy sensors, pc parts, paper towels, glass cleaner, baby powder, etc.</label>
@@ -239,6 +259,7 @@
 				</div>
 			</div>
 			<div class="divider"></div>
+
 			<h2>Payment</h2>
 			<p>The venue fee is required for non-UIUC-students. It is $8 if you pay online, or $10 at the door.</p>
 			<fieldset>
