add multiple poster comment

--- a/rip11/prereg.html
+++ b/rip11/prereg.html
@@ -105,8 +105,14 @@
 				</div>
 			</fieldset>
 			<div class="divider"></div>
+
 			<h2>Merchandise</h2>
+
 			<h3>T-shirts</h3>
+
+			If you'd like multiple of one shirt, contact us (information on next page). Sorry, we'll improve the form next year.
+			<br><br>
+
 			<div class="columns">
 				<div class="card col-sm-12 col-4">
 					<div class="card-image">
@@ -180,6 +186,10 @@
 			<br>
 
 			<h3>Posters</h3>
+
+			If you'd like multiple of one poster, contact us (information on next page). Sorry, we'll improve the form next year.
+			<br><br>
+
 			<div class="columns">
 
 				<div class="card col-sm-12 col-4">
