more slight changes

--- a/rip11/payment.html
+++ b/rip11/payment.html
@@ -39,7 +39,7 @@
 				<h5><a href="https://www.facebook.com/events/184622442460015/">FB Event Page</a></h5>
 				<h4><b>Pay $<span id="amount">8</span> <a id="the_link" href="">here (PayPal)</a>,</b>
 				or Venmo @Benjamin-Tung.</h4><h5>
-				If using PayPal, don't forget to mark "Friends and Family".  The link above should do this, and have your total automatically.</h5>
+				If using PayPal, don't forget to mark "Friends and Family".  The link above should do this, and have your total automatically. Please <b>do not</b> tick the box that says "Paying for goods or a service?".</h5>
 				<hr>
 					   Though we will accept cash at the event, please pay online if you can. 
 				If you prefer or require some other method of sending money, please contact Benjamin Tung at <a href="http://messenger.com/t/noticemebenpai">messenger.com/t/noticemebenpai</a>, or <b>benjamintung21@gmail.com</b>
