--- a/rip11/prereg.html
+++ b/rip11/prereg.html
@@ -303,6 +303,7 @@
 			<!-- <button class="btn btn-primary" id="submit-button">Submit</button> -->
 			<button class="btn btn-primary" onclick="sendQuery(); return false;">Submit</button>
 			<input type="hidden" name="total" id="total" value="0">
+			(please only click once)
 
 		</form>
 	</div>
