--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <!-- <p></p> -->
 
         <!-- Standard buttons -->
-        <a class="button" href="">Signups</a>
-        <a class="button" href="">Payment</a>
+        <a class="button button-primary" href="https://rip.ddrillini.club/rip11/prereg?fbclid=IwAR0rZ2ZkPfrrHP546gTsOWiwjXw1g7Xq9j0jcais9aytgYuYNWc1BaGSj9M">Signups</a>
+        <a class="button button-primary" href="https://www.paypal.me/ddrillini/8">Payment</a>
         <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1z3Cxyfxx8wEDnevehHGDVnmTDJUkLofkPkeRmodyyYg/edit?usp=sharing">Schedule</a>
         <br><br>
 	      
@@ -47,7 +47,7 @@
         <a class="button" href="">Upper Bracket</a>
 	<a class="button" href="">Middle Bracket</a>
 	<a class="button" href="">Lower Bracket</a>
-	<a class="button" href="">Qualifier/Singles Pools</a>
+	<a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1NW8INDMshdMfXg5i8BMH1zhjGU8Vurg83sJxjdteJpY/edit#gid=0">Qualifier/Singles Pools</a>
 
         <br><br>
         <a class="button button-primary" href="food.html">food!</a>
