--- a/index.html
+++ b/index.html
@@ -37,13 +37,14 @@
         <!-- <p></p> -->
 
         <!-- Standard buttons -->
-        <a class="button button-primary" href="https://rip.ddrillini.club/rip11/prereg?fbclid=IwAR0rZ2ZkPfrrHP546gTsOWiwjXw1g7Xq9j0jcais9aytgYuYNWc1BaGSj9M">Signups</a>
+        <a class="button button-primary" href="https://rip.ddrillini.club/rip11/prereg">Signups</a>
         <a class="button button-primary" href="https://www.paypal.me/ddrillini/8">Payment</a>
         <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1z3Cxyfxx8wEDnevehHGDVnmTDJUkLofkPkeRmodyyYg/edit?usp=sharing">Schedule</a>
         <br><br>
 	      
-        <a class="button button-primary" href="https://twitch.tv/sudzi">Stream A</a>
-        <a class="button button-primary" href="https://twitch.tv/ian5v">Stream B</a>
+        <a class="button button-primary" href="https://twitch.tv/ian5v">Upper Stream</a>
+        <a class="button button-primary" href="https://twitch.tv/mutesauce">Mid Stream</a>
+        <a class="button button-primary" href="https://twitch.tv/cartertheq">Lower Stream</a>
         <a class="button" href="">Upper Bracket</a>
 	<a class="button" href="">Middle Bracket</a>
 	<a class="button" href="">Lower Bracket</a>
