add redir, thirteens button frontend

--- a/card-draw/index.html
+++ b/card-draw/index.html
@@ -12,6 +12,13 @@
         <input id="draw5" type="submit" class="button" value="Draw 5">
         <input id="draw7" type="submit" class="button" value="Draw 7">
 
+        <div class="button">
+            <label>
+                <input id="thirteens" type="checkbox" class="button" >
+                Thirteens?
+            </label>
+        </div>
+
         <div style="float: right;">
             <input id="undo" type="submit" class="button" value="Undo">
             <input id="redo" type="submit" class="button" value="Redo">
