--- a/card-draw/index.html
+++ b/card-draw/index.html
@@ -15,7 +15,7 @@
         <div class="button">
             <label>
                 <input id="thirteens" type="checkbox" class="button" >
-                Thirteens?
+                Check me to disable 13s
             </label>
         </div>
 
