--- a/card-draw/index.html
+++ b/card-draw/index.html
@@ -4,18 +4,23 @@
         <title>card draw</title>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
         <link rel="stylesheet" href="card-draw.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:700">
         <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
         <script type="text/javascript" src="card-draw.js"></script>
     </head>
     <body>
-        <div class="title_card">RIP 11</div>
-        <input id="draw5" type="submit" class="button" value="Draw 5">
-        <input id="draw7" type="submit" class="button" value="Draw 7">
+        <div class="title_card">
+            <img src="rip11web.svg" width="150px">
+        </div>
+            <input id="draw5" type="submit" class="button" value="Draw 5">
+            <input id="draw7" type="submit" class="button" value="Draw 7">
+        
 
-        <div class="button">
+        <div class="button_like">
             <label>
-                <input id="thirteens" type="checkbox" class="button" >
-                Check me to disable 13s
+                <input id="thirteens" type="checkbox">
+                Disable 13s
             </label>
         </div>
 
