--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <a class="button button-primary" href="https://twitch.tv/ian5v">Upper Stream</a>
         <a class="button button-primary" href="https://twitch.tv/mutesauce">Mid Stream</a>
         <a class="button button-primary" href="https://twitch.tv/cartertheq">Lower Stream</a>
-        <a class="button button-primary" href="challonge.com/97v6cqh8">Upper Bracket</a>
-	<a class="button button-primary" href="challonge.com/ik85jbkp">Middle Bracket</a>
-	<a class="button button-primary" href="challonge.com/n30juvwy">Lower Bracket</a>
+        <a class="button button-primary" href="https://challonge.com/97v6cqh8">Upper Bracket</a>
+	<a class="button button-primary" href="https://challonge.com/ik85jbkp">Middle Bracket</a>
+	<a class="button button-primary" href="https://challonge.com/n30juvwy">Lower Bracket</a>
 	<a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1NW8INDMshdMfXg5i8BMH1zhjGU8Vurg83sJxjdteJpY/edit#gid=0">Qualifier/Singles Pools</a>
 
         <br><br>
