--- a/rip11/payment.html
+++ b/rip11/payment.html
@@ -37,7 +37,7 @@
 				
 				<h5>March 15th - 17th, 2019.</h5>
 				<h5><a href="https://www.facebook.com/events/184622442460015/">FB Event Page</a></h5>
-				<h4><b>Send ddrillini@gmail.com $<span id="amount">8</span> <a id="the_link" href=""> via PayPal</a>,</b>
+				<h4><b>Send ddrillini@gmail.com $<span id="amount">8</span> via PayPal,</b>
 				or Venmo @Benjamin-Tung.</h4><h5>
                 <h2><a href="/rip11/prereg.html">New Person</a></h2>
 				If using PayPal, don't forget to mark "Friends and Family".  The link above should do this, and have your total automatically. Please <b>do not</b> tick the box that says "Paying for goods or a service?".</h5>
