adding mods srt links to index.html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
 	<a class="button button-primary" href="https://challonge.com/ik85jbkp">Middle Bracket</a>
 	<a class="button button-primary" href="https://challonge.com/n30juvwy">Lower Bracket</a>
 	<a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1NW8INDMshdMfXg5i8BMH1zhjGU8Vurg83sJxjdteJpY/edit#gid=0">Qualifier/Singles Pools</a>
-
+<br>
+	<a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1_JBviCmIpV7YdaKBZC43PvY04E20QrO8A9urJzW4Jow/edit#gid=0">Mods SRT Score Sheet</a>
+	<a class="button button-primary" href="https://challonge.com/mbc3">Mods SRT Bracket</a>
         <br><br>
         <a class="button button-primary" href="food.html">food!</a>
         <a class="button button-primary" href="parking.html">Parking</a>
