--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         <a class="button button-primary" href="https://www.paypal.me/ddrillini/8">Payment</a>
         <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1z3Cxyfxx8wEDnevehHGDVnmTDJUkLofkPkeRmodyyYg/edit?usp=sharing">Schedule</a>
         <br><br>
-	      
+	<a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1D8DqnKxTw-7s3awExQRgl5y8EbNKKZsKLZEdRkwp2AM/edit#gid=0">Couples Standing</a>
+	<br><br> 
         <a class="button button-primary" href="https://twitch.tv/ian5v">Upper Stream</a>
         <a class="button button-primary" href="https://twitch.tv/mutesauce">Mid Stream</a>
         <a class="button button-primary" href="https://twitch.tv/cartertheq">Lower Stream</a>
