--- a/food.html
+++ b/food.html
@@ -65,16 +65,16 @@
       	    Original Pancake House — Sudzi/Brandon's favorite. <br>
             Golden Harbor — Best chinese in champaign, one dish feeds two <br>
             Black Dog — Best BBQ in Champaign <br>
-      			Xinh Xinh Cafe - Vietnamese<br>
+            Xinh Xinh Cafe - Vietnamese<br>
             Himalayan Chimney — New indian place<br>
             Sushi Kame — great sushi, bento boxes<br>
-            Dublin O'Neil's — Irish pub, real fish n chips<br>
             Farren's — borgers<br>
             Watson's Shack and Rail — <b>Fried chicken and alcoholic slushies</b> (sign me UP)<br>
             Cream and Flutter — cute lil pastry shop<br>
             Papa Del's — "Deep Dish" pizza — more like bread cake imo but it's ok. <br>
             El Oasis - Mexican ice cream. Get the spicy chocolate one.<br>
             Huaraches Moroleon - best Mexican nearby<br>
+	    El Patio - second best Mexican nearby<br>
             Destihl — Pricier but heckin' delicious lunch/dinner <br>
             Blind Pig — buncha real good locally made beer, but only that.<br>
             Pekara — Reallllly good cafe. Awesome pastries. <br>
