Tom's food opinions

--- a/food.html
+++ b/food.html
@@ -38,7 +38,7 @@
         <p>
           <h5>Close (~Green Street)</h5>
             <s>Wendy's</s> Garbanzo's — unofficial sponsor of DDRIllini<br>
-            Cravings — Insanely close. Notorious. Beloved. Not open on Sunday. <br>
+            Cravings — Insanely close. Notorious. Beloved. Not open on Sunday. Tom's favorite <br>
             Spicy Tang — Naohiro's favorite, mostly dry & soupy hot pot<br>
             Cocomero — Best froyo you'll ever have, Ian n RedzoneX/Will's favorite <br>
             Paris Super — Thai ice cream and ice cream crepes. Close contender for best ice cream. <br>
@@ -48,6 +48,7 @@
             Jerusalem Grill — Peter's favorite <br>
             Legends — Bar, good burgers and beer specials on friday <br>
             Joes — Bar, good burgers<br>
+            Ambar India — Indian buffet. Great value given campus proximity<br>
             <br>
           <h5>Medium — 5-10m walk</h5>
             Ko Fusion — ok sushi <br>
@@ -56,10 +57,13 @@
 	    Lai Lai Wok, Mandarin Wok, Mr. Chou and Charles — big servings Chinese <br>
             Insomnia Cookies — xquatra/Alex's favorite <br>
             Fat Sandwich — best drunk food, ok when sober <br>
+            Burrito King — drunk Mexican food smothered in queso <br>
             Basil Thai — best Thai nearby<br>
 	    Bangkok Thai — arguablly better Thai for Benpai<br>
             Merry Ann's — Traditional american Diner, Tucker's fave<br>
-            Maize - second best Mexican nearby<br>
+            Maize — second best Mexican nearby<br>
+            Lao Sze Chaun — Slightly upscale Chinese food. Students from China seem to like it<br>
+            Signature Grill — It's like Indian Chipotle<br>
 			<br>
           <h5>You *need* a car Far</h5>
       	    Original Pancake House — Sudzi/Brandon's favorite. <br>
@@ -68,10 +72,12 @@
             Xinh Xinh Cafe - Vietnamese<br>
             Himalayan Chimney — New indian place<br>
             Sushi Kame — great sushi, bento boxes<br>
+            Moki Sushi — Sushi bufffeettt. Great quality for buffet sushi<br>
             Farren's — borgers<br>
             Watson's Shack and Rail — <b>Fried chicken and alcoholic slushies</b> (sign me UP)<br>
             Cream and Flutter — cute lil pastry shop<br>
             Papa Del's — "Deep Dish" pizza — more like bread cake imo but it's ok. <br>
+            Giordano's — Nobody seems to realize we have a real deep dish place here. <br>
             El Oasis - Mexican ice cream. Get the spicy chocolate one.<br>
             Huaraches Moroleon - best Mexican nearby<br>
 	    El Patio - second best Mexican nearby<br>
