move deps to deps folder, add localforage

--- a/card-draw/index.html
+++ b/card-draw/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="card-draw.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:700">
-        <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
+        <script type="text/javascript" src="deps/jquery-3.3.1.min.js"></script>
         <script type="text/javascript" src="card-draw.js"></script>
     </head>
     <body>
