--- a/index.html
+++ b/index.html
@@ -37,24 +37,22 @@
         <!-- <p></p> -->
 
         <!-- Standard buttons -->
-        <a class="button button-primary" href="https://rip.ddrillini.club/rip11/prereg">Signups</a>
-        <a class="button button-primary" href="https://www.paypal.me/ddrillini/8">Payment</a>
-        <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1z3Cxyfxx8wEDnevehHGDVnmTDJUkLofkPkeRmodyyYg/edit?usp=sharing">Schedule</a>
+        <a class="button" href="https://rip.ddrillini.club/rip11/prereg">Signups</a>
+        <a class="button" href="https://www.paypal.me/ddrillini/10">Payment</a>
+        <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1a0jV1BJrFdVZ3_Hr6-Ran_OWO6hXh2ewLQmN9wKakYY/edit?usp=sharing">Schedule</a>
         <br><br>
-		<a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1D8DqnKxTw-7s3awExQRgl5y8EbNKKZsKLZEdRkwp2AM/edit#gid=0">Couples Standings</a>
+		<a class="button" href="">Couples Standings</a>
 		<br><br> 
-        <a class="button button-primary" href="https://multistre.am/ian5v/mutesauce/cartertheq/layout0/">Multistream</a>
-        <a class="button button-primary" href="https://twitch.tv/ian5v">Upper Stream</a>
-        <a class="button button-primary" href="https://twitch.tv/mutesauce">Mid Stream</a>
-        <a class="button button-primary" href="https://twitch.tv/cartertheq">Lower Stream</a>
+        <a class="button button-primary" href="https://multistre.am/mutesauce/cartertheq/layout0/">Multistream</a>
+        <a class="button button-primary" href="https://twitch.tv/cartertheq">Upper Stream</a>
+        <a class="button button-primary" href="https://twitch.tv/mutesauce">Lower Stream</a>
         <br><br>
-        <a class="button button-primary" href="https://challonge.com/97v6cqh8">Upper Bracket</a>
-	<a class="button button-primary" href="https://challonge.com/ik85jbkp">Middle Bracket</a>
-	<a class="button button-primary" href="https://challonge.com/n30juvwy">Lower Bracket</a>
-	<a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1NW8INDMshdMfXg5i8BMH1zhjGU8Vurg83sJxjdteJpY/edit#gid=0">Qualifier/Singles Pools</a>
+        <a class="button" href="">Upper Bracket</a>
+	<a class="button" href="">Lower Bracket</a>
+	<a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1l7jo2jCSgRpP7g1Nr5Pj_4z6FUxYGnpGZF55A0k1ceQ/edit?usp=sharing">Qualifier/Singles Pools</a>
 <br>
-	<a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1_JBviCmIpV7YdaKBZC43PvY04E20QrO8A9urJzW4Jow/edit#gid=0">Mods SRT Score Sheet</a>
-	<a class="button button-primary" href="https://challonge.com/mbc3">Mods SRT Bracket</a>
+	<a class="button" href="">Mods SRT Score Sheet</a>
+	<a class="button" href="">Mods SRT Bracket</a>
         <br><br>
         <a class="button button-primary" href="food.html">food!</a>
         <a class="button button-primary" href="parking.html">Parking</a>
@@ -62,11 +60,11 @@
 	<br><br>
         
 
-        <a class="button button-primary" href="https://www.dropbox.com/s/7ob2ijafr95s4dc/RIP11%20Singles%20Qualifiers.zip?dl=0">Qualifier DL</a>
-        <a class="button button-primary" href="https://www.dropbox.com/s/v21bekoqdrlo055/RIP11%20Singles.zip?dl=0">Singles DL</a>
-        <a class="button button-primary" href="https://www.dropbox.com/s/240xa74998d7qyu/Doubles%20Tournament%20Expansion%20v7.zip?dl=0">Doubles DL</a>
-	<a class="button button-primary" href="https://docs.google.com/document/d/1ViOIIRnzXbSaoDvqRoiKxuF6jRiLvgxSRuqSE2M7ht8/edit?usp=sharing">Singles Rules</a>
-        <a class="button button-primary" href="https://www.dropbox.com/s/fd188km2e7y8gjv/doubles_ruleset_rip11.pdf?dl=0">Doubles Rules</a>
+        <a class="button" href="">Qualifier DL</a>
+        <a class="button button-primary" href="https://www.dropbox.com/s/bwvu0qs9rvolytg/RIP11.5.zip?dl=0">Singles DL</a>
+        <a class="button button-primary" href="http://sudzi.us/simfiles/packs/Doubles%20Tournament%20Expansion%20v8.zip?fbclid=IwAR167dBsnMXd9-MN696ejeB3bF34mctqbj9lkyIb2APuI6Ygj0BKrlb1CPk">Doubles DL</a>
+	<a class="button button-primary" href="https://docs.google.com/document/d/1U-IMX6s8T7U6W_or5xy7jCQm4K7BgNKL9R1krh7db08/edit?usp=sharing">Singles Rules</a>
+        <a class="button button-primary" href="https://docs.google.com/document/d/1bGLO-b7gSlatnmhQLlwQqzi2r7Pzs9JehJFE_8YQCfc/edit?usp=sharing">Doubles Rules</a>
 	<br><br>
       </div>
     </div>
