--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- <p></p> -->
 
         <!-- Standard buttons -->
-        <a class="button" href="https://rip.ddrillini.club/rip11/prereg">Signups</a>
+        <a class="button" href="https://forms.gle/TNfbuEDAcsoDZ1WM6">Signups</a>
         <a class="button" href="https://www.paypal.me/ddrillini/10">Payment</a>
         <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1a0jV1BJrFdVZ3_Hr6-Ran_OWO6hXh2ewLQmN9wKakYY/edit?usp=sharing">Schedule</a>
         <br><br>
@@ -58,9 +58,8 @@
         <a class="button button-primary" href="parking.html">Parking</a>
         <a class="button button-primary" href="stuff.html">stuff to do!</a>
 	<br><br>
-        
 
-        <a class="button" href="">Qualifier DL</a>
+        <a class="button button-primary" href="https://www.dropbox.com/s/m8c9akh7mxj7og9/RIP11.5%20Qualifiers.zip?dl=0">Qualifier DL</a>
         <a class="button button-primary" href="https://www.dropbox.com/s/bwvu0qs9rvolytg/RIP11.5.zip?dl=0">Singles DL</a>
         <a class="button button-primary" href="http://sudzi.us/simfiles/packs/Doubles%20Tournament%20Expansion%20v8.zip?fbclid=IwAR167dBsnMXd9-MN696ejeB3bF34mctqbj9lkyIb2APuI6Ygj0BKrlb1CPk">Doubles DL</a>
 	<a class="button button-primary" href="https://docs.google.com/document/d/1U-IMX6s8T7U6W_or5xy7jCQm4K7BgNKL9R1krh7db08/edit?usp=sharing">Singles Rules</a>
