--- a/food.html
+++ b/food.html
@@ -47,30 +47,35 @@
             Spoon House — big serving of hot Korean food.<br>
             Jerusalem Grill — Peter's favorite <br>
             Legends — Bar, good burgers and beer specials on friday <br>
+	    Cracked - Open late, breakfast burritos, sandwiches, and tater tots <br>
             Joes — Bar, good burgers<br>
             Ambar India — Indian buffet. Great value given campus proximity<br>
+	    Signature Grill — It's like Indian Chipotle<br>
+	    Midsummer Lounge - Szechuan-style noodle and dumplings, big recommendation from Ben, tho a bit oily<br>
             <br>
           <h5>Medium — 5-10m walk</h5>
             Ko Fusion — ok sushi <br>
             Sakanaya — better sushi, pricey <br>
-	    Lai Lai Wok, Mandarin Wok, Mr. Chou and Charles — big servings Chinese <br>
+	    Lai Lai Wok, Mandarin Wok — big servings Chinese <br>
             Insomnia Cookies — xquatra/Alex's favorite <br>
             Fat Sandwich — best drunk food, ok when sober <br>
             Burrito King — drunk Mexican food smothered in queso <br>
+	    Jurassic Grill - late night borgers with cajun fries, also sells empanadas<br>
             Basil Thai — best Thai nearby<br>
-	    Bangkok Thai — arguablly better Thai for Benpai<br>
+	    Bangkok Thai — arguably better Thai for Benpai<br>
             Merry Ann's — Traditional american Diner, Tucker's fave<br>
             Maize — second best Mexican nearby<br>
             Lao Sze Chaun — Slightly upscale Chinese food. Students from China seem to like it<br>
-            Signature Grill — It's like Indian Chipotle<br>
+            
 			<br>
           <h5>You *need* a car Far</h5>
       	    Original Pancake House — Sudzi/Brandon's favorite. <br>
             Golden Harbor — Best chinese in champaign, one dish feeds two <br>
+	    Wingstop - who doesn't like chicken wings?
             Black Dog — Best BBQ in Champaign <br>
-            Xinh Xinh Cafe - Vietnamese<br>
-            Himalayan Chimney — New indian place<br>
-            Sushi Kame — great sushi, bento boxes<br>
+            Xinh Xinh Cafe - Vietnamese food, good pho and thai ice tea, vietnamese coffee with condensed milk<br>
+            Himalayan Chimney — More upscale Indian place<br>
+            Sushi Kame — Great sushi, bento boxes<br>
             Moki Sushi — Sushi bufffeettt. Great quality for buffet sushi<br>
             Farren's — borgers<br>
             Watson's Shack and Rail — <b>Fried chicken and alcoholic slushies</b> (sign me UP)<br>
@@ -82,6 +87,7 @@
 	    El Patio - second best Mexican nearby<br>
             Destihl — Pricier but heckin' delicious lunch/dinner <br>
             Blind Pig — buncha real good locally made beer, but only that.<br>
+	    Pour Brothers - Another bar but you control how much comes out of the tap<br>
             Pekara — Reallllly good cafe. Awesome pastries. <br>
             Portillo's — Chicago classic. Good italian beef, hotdogs, chocolate cake.<br>
         </p>
